[package]
name = "ark-tom256"
version = "0.1.1"
description = "The Tom-256 curve"
documentation = "https://docs.rs/ark-tom256/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-r1cs-std = { version = "0.5.0", default-features = false, optional = true }
ark-std = { version = "0.5.0", default-features = false }

[dev-dependencies]
ark-relations = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-algebra-test-templates = { version = "0.5.0", default-features = false }
ark-algebra-bench-templates = { version = "0.5.0", default-features = false }
ark-curve-constraint-tests = { path = "curve-constraint-tests" }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
r1cs = [ "ark-r1cs-std" ]
zero-flag = []

[[bench]]
name = "tom256"
path = "benches/tom256.rs"
harness = false

[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra" }
ark-algebra-bench-templates = { git = "https://github.com/arkworks-rs/algebra" }
ark-std = { git = "https://github.com/arkworks-rs/std/" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
