[package]
name = "ark-tom256"
version = "0.1.3"
description = "The Tom-256 curve"
documentation = "https://docs.rs/ark-tom256/"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-r1cs-std = { version = "0.5.0", default-features = false, optional = true }
ark-std = { version = "0.5.0", default-features = false }

[dev-dependencies]
ark-relations = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-algebra-test-templates = { version = "0.5.0", default-features = false }
ark-algebra-bench-templates = { version = "0.5.0", default-features = false }
ark-curve-constraint-tests = { path = "curve-constraint-tests" }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]
r1cs = [ "ark-r1cs-std" ]
zero-flag = []

[[bench]]
name = "tom256"
path = "benches/tom256.rs"
harness = false

[patch.crates-io]
ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "8de9a9d9ba52566b1ba5637fbd1b3ce98dad17e8" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "8de9a9d9ba52566b1ba5637fbd1b3ce98dad17e8" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "8de9a9d9ba52566b1ba5637fbd1b3ce98dad17e8" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", rev = "8de9a9d9ba52566b1ba5637fbd1b3ce98dad17e8" }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra", rev = "8de9a9d9ba52566b1ba5637fbd1b3ce98dad17e8" }
ark-algebra-bench-templates = { git = "https://github.com/arkworks-rs/algebra", rev = "8de9a9d9ba52566b1ba5637fbd1b3ce98dad17e8" }
ark-std = { git = "https://github.com/arkworks-rs/std/", rev = "1693bc56d2ca6657b623f33a3f0b009d0ffeb892" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", rev = "45e4e2697626a9f9481fe57e70ed29c687194102" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
