[package]
name = "ark-curve-constraint-tests"
version = "0.1.0"
description = "A library for testing constraints for finite fields, elliptic curves, and pairings"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std", "ark-ec/std", "ark-relations/std", "ark-r1cs-std/std" ]
